--- a/Juno-annotation.Rmd
+++ b/Juno-annotation.Rmd
@@ -145,18 +145,4 @@ This message means that either you provided the wrong path/name to your metadata
 
 #### Other problems or failing rules  
 
-The `r parameters$pipeline_name` pipeline is still in development which means that sometimes the process can fail.
-
-Before contacting for help, try these two steps:
-
-1. Re-run the pipeline again and see if the process continues. If it does, please keep re-running the pipeline until your analysis is finished or there is no longer progress. In this case, send an email after the pipeline is finished so I can troubleshoot the problem.
-
-2. [Download](https://github.com/RIVM-bioinformatics/Juno-annotation) the pipeline again and start from the beginning of this [handbook](#juno-annotation). Sometimes there is an issue that has been resolved in newer versions of the pipeline.
-
-If the pipeline still fails after these two steps, please inform me about the problem. Send an [e-mail](mailto:alejandra.hernandez.segura@rivm.nl) with the following content:
-
-* The log and error files that can be found in the output folder
-* The path to your input directory
-* The path to where the pipeline is installed
-
-**Note:** I cannot help you without this information, if information is missing there will be a delay in troubleshooting the problem.
+The `r parameters$pipeline_name` pipeline is still in development which means that sometimes the process can fail. This pipeline is not very actively maintained but if you run into problems, you can ask [Roxanne Wolthuis](mailto:roxanne.wolthuis@rivm.nl) or [Fabian Landman](mailto:fabian.landman@rivm.nl).   
