--- a/Triumph_Project_report.Rmd
+++ b/Triumph_Project_report.Rmd
@@ -5,6 +5,9 @@ output:
 ---
 # Triumph: Project report {#triumph_project}
 
+**CURRENTLY NOT MAINTAINED OR SUPPORTED**
+
+
 <style>
 body {
 text-align: justify}
@@ -83,16 +86,4 @@ In both cases, the output folder will contain the Triumph_Project_report.html fi
 
 #### Other problems or failing rules  
 
-The `r parameters$pipeline_name` pipeline is still in development which means that sometimes the process can fail. Make sure you ran the pipeline with the Triumph_dada2_run_pipeline and that you did not change the name of any file. Try to create the report again. If you are sure all the input files are correct and the report does not run try the two steps below before contacting for help:
-
-1. Re-run the pipeline again and see if the process continues. If it does, please keep re-running the pipeline until your analysis is finished or there is no longer progress. In this case, send an email after the pipeline is finished so I can troubleshoot the problem.
-
-2. [Download](https://gitl01-int-p.rivm.nl/hernanda/triumph_project_report) the pipeline again and start from the beginning of this [handbook](#triumph_project). Sometimes there is an issue that has been resolved in newer versions of the pipeline.
-
-If the pipeline still fails after these two steps, please inform me about the problem. Send an [e-mail](mailto:alejandra.hernandez.segura@rivm.nl) with the following content:
-
-* The log and error files that can be found in the output folder
-* The path to your input directory
-* The path to where the pipeline is installed
-
-**Note:** I cannot help you without this information, if information is missing there will be a delay in troubleshooting the problem.
+The `r parameters$pipeline_name` pipeline is currently not maintained or supported.  
