--- a/Juno-typing.Rmd
+++ b/Juno-typing.Rmd
@@ -32,7 +32,7 @@ The goal of this pipeline is to perform bacterial typing (7-locus MLST and serot
 
 2. An assembly from the same sample in the form of a single '.fasta' file.  
 
-Importantly, the Juno-typing pipeline works directly on output generated from the Juno-assembly pipeline. 
+Importantly, the Juno-typing pipeline works directly on output generated from the [Juno-assembly](#juno-assembly) pipeline. 
 
 The Juno-typing pipeline will then perform the following steps:  
 
@@ -118,15 +118,15 @@ If you run in trouble please see the [troubleshooting section for conda activate
 
 4. Run the pipeline  
 
-This can be done in two ways. The first one is just providing an input directory:  
+This can be done in three ways. The first one is just providing an input directory with the results of the juno_assembly pipeline:  
 
 ```{bash}
-python juno-typing -i /mnt/scratch_dir/<my_folder>/<my_data>/
+python juno-typing -i /mnt/scratch_dir/<my_folder>/<results_juno_assembly>/
 ```
 
-The second one is providing as well a metadata (csv) file. This file should contain at least one column with the 'Sample' name (name of the file but removing [_S##]_R1.fastq.gz), a column called 'Genus' and a column called 'Species'. If a genus + species is provided for a sample, it will overwrite the species identification performed by this pipeline when choosing the scheme for MLST and the serotyper. Example metadata file:
+The second one is providing an input directory as well as a metadata (csv) file. This file should contain at least one column with the 'sample' name (name of the file but removing [_S##]_R1.fastq.gz), a column called 'genus' and a column called 'species'. If a genus + species is provided for a sample, it will overwrite the species identification performed by this pipeline when choosing the scheme for MLST and the serotyper. Example metadata file:
 
-| __Sample__ | __Genus__ | __Species__ |
+| __sample__ | __genus__ | __species__ |
 | :---: | :--- | :--- |
 | sample1 | Salmonella | enterica |
 
@@ -134,6 +134,13 @@ The second one is providing as well a metadata (csv) file. This file should cont
 python juno_typing.py -i my_input_files --metadata path/to/my/metadata.csv
 ```
 
+The last way is to tell the pipeline which species the samples have. Note that only ONE species can be given for ALL the samples, so it will be assumed that they all belong to the same one. Each species should have two words (genus + species).  
+
+```{r}
+python juno_typing.py -i my_input_files --species salmonella enterica
+```
+
+If you give both, a metadata file and a `--genus`, the `--genus` will take precedence and overwrite the metadata file.
 
 *Note:* The fastq files corresponding to this sample would probably be something like `sample1_S1_R1_0001.fastq.gz` and `sample2_S1_R1_0001.fastq.gz` and the fasta file `sample1.fasta`.
 
@@ -150,7 +157,7 @@ A folder called `output/`, inside the folder of the pipeline, will be created. T
 *Note:* If you want your output to be stored in a folder with a different name or location, you can use the option `-o` ('o' from output) 
 
 ```{bash}
-bash juno-typing -i /mnt/scratch_dir/<my_folder>/<my_data>/ -o /mnt/scratch_dir/<my_folder>/<my_results>/
+python juno_typing.py -i /mnt/scratch_dir/<my_folder>/<my_data>/ -o /mnt/scratch_dir/<my_folder>/<my_results>/
 ```
 
 Another very important output from the pipeline are the logging files and audit trail that contain information of the software versions used, the parameters used, the error messages, etc. They could be important for you if you want to publish or reproduce the analysis at a later time point and also to get help from the bioinformatics team if you were to run into trouble with the pipeline. Please read about these files [here](#general-output). 
